<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="your_result">Your Result</string>
    <string name="bmi">BMI</string>
    <string name="body_composition">Body composition</string>
    <string name="retry">Retry</string>
</resources>