<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageButton
        android:id="@+id/btnMale"
        android:layout_width="122dp"
        android:layout_height="118dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/male"
        android:outlineProvider="none"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225"
        app:srcCompat="@drawable/male" />

    <ImageButton
        android:id="@+id/btnFemale"
        android:layout_width="122dp"
        android:layout_height="118dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/female"
        android:elevation="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/female" />

    <TextView
        android:id="@+id/tvMale"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMale"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvFemale"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFemale"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/yellow"
        android:textColorHint="@color/material_dynamic_neutral50"
        android:textColorLink="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/yellow"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:textColorLink="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/height_in_cm"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHighlight="@color/yellow"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:textColorLink="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/calculate"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/yellow"
        android:textColorLink="@color/yellow"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

    <TextView
        android:id="@+id/errorAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/error"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/errorHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/error"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeight"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/errorWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/error"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWeight"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>