<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:clipToPadding="true"
    android:padding="16dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_result"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:layout_margin="36dp"
        android:clipToPadding="true"
        android:padding="36dp"
        android:paddingLeft="36dp"
        android:paddingTop="36dp"
        android:paddingRight="36dp"
        android:paddingBottom="36dp"
        app:cardBackgroundColor="@color/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAgeValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:layout_margin="36dp"
        android:clipToPadding="true"
        android:padding="36dp"
        android:paddingLeft="36dp"
        android:paddingTop="36dp"
        android:paddingRight="36dp"
        android:paddingBottom="36dp"
        app:cardBackgroundColor="@color/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWeightValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weight_in_kg"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="136dp"
        android:layout_height="97dp"
        android:layout_margin="36dp"
        android:clipToPadding="true"
        android:padding="36dp"
        android:paddingLeft="36dp"
        android:paddingTop="36dp"
        android:paddingRight="36dp"
        android:paddingBottom="36dp"
        app:cardBackgroundColor="@color/card_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeightValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/height_in_cm"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:text="@string/retry"
        android:textColor="@color/primary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_baseline_refresh_24"
        app:iconTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913" />

    <TextView
        android:id="@+id/tvComposition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/body_composition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bmi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/tvIndex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/material_dynamic_neutral90"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

</androidx.constraintlayout.widget.ConstraintLayout>